# halo2-hash-benching

./: Cargo.toml  README.md
src/: main.rs
src/sha256/: mod.rs  table16.rs
src/sha256/table16/: spread_table.rs
src/sha256/table16/compression/: compression_util.rs
